[metadata]
name = django-ip-restrictor
version = 0.1.0
description = A Django package to restrict views based on IP addresses.
long_description = file: README.md
long_description_content_type = text/markdown
author = Alireza Fathi
author_email = alirezafathi.ce@gmail.com
url = https://github.com/sudoAlireza/django-ip-restrictor
license = MIT
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    Django>=3.2
include_package_data = False
python_requires = >=3.7